--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  background: #eee;
+  background: #fff;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #000;
@@ -20,29 +20,26 @@ body {
   width: 100%;
   height: 100%;
   user-select: none;
+  padding: 40px;
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 280px;
   object-fit: cover;
+  border-radius: 10px;
 }
 
 .swiper {
   width: 100%;
-  height: 350px;
+  height: 420px;
   margin: 20px auto;
 }
 .append-buttons {
@@ -61,7 +58,7 @@ body {
   margin: 0 10px;
   font-size: 13px;
 }
-.swiper-button-prev{
-    background-color: black !important;
-    color: white;
+.swiper-button-prev {
+  background-color: black !important;
+  color: white;
 }
