--- a/src/custom.css/styles.css
+++ b/src/custom.css/styles.css
@@ -76,3 +76,9 @@ body {
 .swiper-button-next:hover {
   background-color: black;
 }
+
+@media only screen and (min-device-width: 300px) and (max-device-width: 576px) {
+  .swiper {
+    padding: 0 10px;
+  }
+}
